src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_class_decl_field_noprotect_var_mult_sans_egal1.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une class, decl field 
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    int iden1, iden2 =98499;
}