src/test/deca/syntax/invalid/homemade/test/test_pars_inv_class_oubli_extends.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 11 : Erreur (oubli extends)
//    
//
// Historique:
//    cree le 04/01/2023

class iden2{
    
}
class iden1 iden2{

}